Fix jumping menu on landscape iPhone SE 2

--- a/style.css
+++ b/style.css
@@ -1800,8 +1800,8 @@ html[xmlns] .clearfix {
     display: block !important;
     position: absolute;
     top: 0;
+    left: 0;
     right: 0;
-    width: 100%;
     background: transparent;
     border-bottom: 1px solid #e9e9e9;
     border-top: 1px solid #e9e9e9;
@@ -1839,16 +1839,14 @@ html[xmlns] .clearfix {
   }
 
   .main-navigation .nav-menu {
-    width: 100% !important;
     display: none;
-
     margin: 0;
     position: absolute;
     top: 128px;
+    left: 0;
     right: 0;
     -ms-transform: translateY(0%);
     transform: translateY(0%);
-
   }
 
   .nav-menu.nav-menu-mobile > li > a {
